# easemob-doc-mcp

./: .gitignore  .npmignore  API_REFERENCE.md  CHANGELOG.md  CURSOR_DOCKER_INTEGRATION.md  CURSOR_INTEGRATION.md  DEPLOYMENT.md  Dockerfile  MCP_EXPLORATION.md  MIGRATION.md  README.md  create_callkit_test_files.py  debug_search.py  debug_sse_client.py  deploy.sh  docker-compose.yml  easemob-doc-mcp.conf  easemob-doc-mcp.service  install.sh  nodemon.json  package-lock.json  package.json  pyproject.toml  quick-deploy.sh  reproduce_bug.py  requirements.txt  setup_cron.sh  test_callkit.py  test_document_content.py  test_mcp_curl.sh  test_mcp_official.py  test_param_description.py  test_search.py  test_search_standalone.py  tsconfig.json  uninstall.sh  update_docs.sh  verify_logic.py
document/android/: connection.md  conversation_list.md  demo.md  easecallkit.md  elite_sdk.md  error.md  group_attributes.md  group_manage.md  group_members.md  integration.md  login.md  message_forward.md  message_modify.md  message_recall.md  message_receipt.md  message_receive.md  message_retrieve.md  message_search.md  message_send.md  message_send_receive.md  message_translation.md  moderation.md  multi_device.md  (+10 more)
easemob_doc_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: basic-usage.js  sse-streaming.js
fastmcp_server/: client_example.py  main.py  run_mcp.py
scripts/: postinstall.js  quick-start.sh  setup-cursor.js
src/: cli.ts  client.ts  index.ts  indexer.py  mcp-client.ts  mcp-server.ts  mcp-simple-client.ts  mcp-standard-client.ts  server.py  server.ts  service.py  types.ts
test/: test-basic.js  test_sse.js
(+358 files in other folders)
