[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easemob-doc-mcp"
version = "1.0.0"
description = "环信文档搜索 MCP 服务"
authors = [
    {name = "dujiepeng", email = "dujiepeng@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "fastmcp>=0.1.0",
    "pydantic>=2.3.0"
]

[project.scripts]
easemob-doc-mcp = "fastmcp_server.run_mcp:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastmcp_server*"] 