[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easemob-doc-mcp"
version = "1.0.0"
description = "环信文档搜索 MCP 服务"
authors = [
    {name = "dujiepeng", email = "dujiepeng@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=2.9.0",
    "pydantic>=2.3.0"
]

[project.scripts]
easemob-doc-mcp = "fastmcp_server.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastmcp_server*"] 