[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easemob-doc-mcp"
version = "1.1.18"
description = "环信文档搜索 MCP 服务"
authors = [
    {name = "dujiepeng", email = "dujiepeng@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=2.9.0"
]

[project.scripts]
easemob-doc-mcp = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"] 